# item2vec

./: .dockerignore  .gitignore  Dockerfile  README.md  aboutpet.bert4rec.train.py  aboutpet.carca.train.py  aboutpet.carca.v1.delete.py  aboutpet.carca.v1.export.py  aboutpet.carca.v1.train.py  aboutpet.item2vec.delete.py  aboutpet.item2vec.export.py  aboutpet.item2vec.pastbias.py  aboutpet.item2vec.prep.py  aboutpet.item2vec.train.py  aboutpet.item2vec.update.py  aboutpet.item2vec.upsert.py  aboutpet.item2vec.v1.delete.py  aboutpet.item2vec.v1.export.py  aboutpet.item2vec.v1.prep.py  aboutpet.item2vec.v1.train.py  aboutpet.item2vec.v1.upsert.py  aboutpet.onnx.validation.py  aboutpet.popular.export.py  aboutpet.popular.py  aboutpet.sh  aboutpet.train.py  exec.carca.delete.py  exec.carca.export.py  exec.carca.onnx.validation.py  exec.carca.train.py  exec.item2vec.delete.py  exec.item2vec.export.py  exec.item2vec.prep.py  exec.item2vec.train.py  gsshop.carca.v1.train.py  gsshop.item2vec.kt.train.py  gsshop.item2vec.prep.py  gsshop.item2vec.train.py  gsshop.item2vec.v1.prep.py  gsshop.item2vec.v1.train.py  (+15 more)
analysis/: colors.py  embed_vis.py  histogram.py  norm.py  poe_visual.py  tnse+kmeans_2d.py  top_k.py  tsne+kmeans_3d.py  tsne.py
carca/: __init__.py  attention.py  configs.py  encoding.py  modules.py
clients/: __init__.py
configs/: __init__.py  aboutpet.carca.v1.yaml  aboutpet.item2vec.v1.yaml  gsshop.carca.v1.yaml  gsshop.item2vec.kt.yaml  gsshop.item2vec.v1.yaml  wshop.carca.v1.yaml  wshop.item2vec.v1.yaml
directories/: __init__.py
item2vec/: configs.py  (+10 more)
(+32 files in other folders)
