[tool.poetry]
name = "item2vec"
version = "0.1.0"
description = "Buzzni Recommendation Models"
authors = ["yongwoo <nelly@buzzni.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytorch-lightning = "^2.4.0"
wandb = "^0.19.0"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
orjson = "^3.10.12"
python-dateutil = "^2.9.0.post0"
rank-bm25 = "^0.2.2"
torch-geometric = "^2.6.1"
pandas = "^2.2.3"
sqlalchemy = "^2.0.36"
s3fs = "^2024.10.0"
trino = "^0.331.0"
pymongo = "^4.10.1"
redis = "^5.2.1"
retry = "^0.9.2"
onnx = "^1.17.0"

[tool.poetry.extras]
gpu = ["onnxruntime-gpu"]
cpu = ["onnxruntime"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
